			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04b: *********************************

BUG: (10/10/05, SMR) Spice output fails to instantiate subcells that are replaced by a model file (Bug #637).
FIX: In Topology.Visitor.enterCell(), cache cell information even if being ignored.

BUG: (10/10/05, SMR) Cell-center nodes are not visible in black-background colors (Bug #627).
FIX: The commands to switch color schemes now change the Generic layer colors.

BUG: (10/10/05, SMR) When editing "down in place", scroll bars and arrow keys are wrong (Bug #634).
FIX: Scroll bars fixed in EditWindow.setScrollPositionUnsafe, bottomScrollChanged, and rightScrollChanged.
     Arrow keys fixed in ClickZoomWireListener.moveSelected.

IMP/MAN: (10/09/05, SMR) Added different outline patterns to textured layers (Bug #617).
     Affects "Artwork Appearance" and "Layers" preferences.
     Updated technology editor to handle it.

BUG: (10/07/05, GVG) Cut spacing in 1xN and MxN poly contacts was not 2.5 and 2.8 respectively (Bug #624)
FIX: Split of cut DRC rules into CUTSPA and CUTSPA2D as it is done in TSMC90.

BUG: (10/07/05, GVG) Fix CUTSUR to 1.4 for well contacts in TSM180.

IMP: (10/07/05, GVG) Cadence Preferences XML under SunAsync menu. It will allow you to backup previous configuration.

IMP: (10/07/05, GVG) Disconnect resizing of arcs when you switch from Mosis->TSMC until better solution is found.

BUG: (10/07/05, SMR) Pure layer nodes of well or select are not drawn (Bug #622).
FIX: In VectorDrawing, do not ignore well/select layers from pure-layer nodes.

IMP: (10/07/05, SMR) Parasitics preferences now have technology popup.

BUG: (10/07/05, SMR) Component menu has wrong background color (Bug #620).
FIX: Moved initialization of background color in PixelDrawing.java.

BUG: (10/06/05, DN) Epic waveform viewer exception while reading incomplete out file (Bug #619)